<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            app:layout_constraintVertical_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="222dp"
                android:layout_weight="0.5">
            <TextView
                    android:layout_weight="0.9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_results"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:layout_weight="0.1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_operations"
                    android:layout_marginLeft="8dp"/>
        </LinearLayout>
        <GridLayout
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:id="@+id/gridLayout">


            <Button
                    android:text="@string/button_openb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_closeb"
                    android:backgroundTint="@color/simpleOperations"
                    android:layout_row="@integer/row_4"
                    android:layout_column="@integer/column_1"
            />
            <Button
                    android:text="@string/button_closeb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_openb"
                    android:backgroundTint="@color/simpleOperations"
                    android:layout_row="@integer/row_4"
                    android:layout_column="@integer/column_0"
            />
            <Button
                    android:text="@string/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_delete"
                    android:backgroundTint="@color/simpleOperations"
                    android:layout_row="@integer/row_4"
                    android:layout_column="@integer/column_2"
            />
            <Button
                    android:text="@string/button_erase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_erase"
                    android:backgroundTint="@color/simpleOperations"
                    android:layout_row="@integer/row_4"
                    android:layout_column="@integer/column_3"
            />

            <Button
                    android:text="@string/button_equal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_equal"
                    android:backgroundTint="@color/simpleOperations"
                    android:layout_row="@integer/row_0"
                    android:layout_column="@integer/column_2"
            />
            <Button
                    android:text="@string/button_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_dot"
                    android:backgroundTint="@color/simpleOperations"
                    android:layout_row="@integer/row_0"
                    android:layout_column="@integer/column_0"
            />
            <Button
                    android:text="@string/button_div"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_div"
                    android:backgroundTint="@color/simpleOperations"
                    android:layout_row="@integer/row_3"
                    android:layout_column="@integer/column_3"
            />
            <Button
                    android:text="@string/button_mult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_mult"
                    android:backgroundTint="@color/simpleOperations"
                    android:layout_row="@integer/row_2"
                    android:layout_column="@integer/column_3"
            />
            <Button
                    android:text="@string/button_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_minus"
                    android:backgroundTint="@color/simpleOperations"
                    android:layout_row="@integer/row_1"
                    android:layout_column="@integer/column_3"
            />
            <Button
                    android:text="@string/button_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_plus"
                    android:backgroundTint="@color/simpleOperations"
                    android:layout_row="@integer/row_0"
                    android:layout_column="@integer/column_3"
            />
            <Button
                    android:text="@string/button_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_9"
                    android:backgroundTint="@color/numbers"
                    android:layout_row="@integer/row_3"
                    android:layout_column="@integer/column_2"
            />
            <Button
                    android:text="@string/button_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_8"
                    android:backgroundTint="@color/numbers"
                    android:layout_row="@integer/row_3"
                    android:layout_column="@integer/column_1"
            />
            <Button
                    android:text="@string/button_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_7"
                    android:backgroundTint="@color/numbers"
                    android:layout_row="@integer/row_3"
                    android:layout_column="@integer/column_0"
            />

            <Button
                    android:text="@string/button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_4"
                    android:backgroundTint="@color/numbers"
                    android:layout_row="@integer/row_2"
                    android:layout_column="@integer/column_0"
            />
            <Button
                    android:text="@string/button_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_5"
                    android:backgroundTint="@color/numbers"
                    android:layout_row="@integer/row_2"
                    android:layout_column="@integer/column_1"
            />
            <Button
                    android:text="@string/button_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_6"
                    android:backgroundTint="@color/numbers"
                    android:layout_row="@integer/row_2"
                    android:layout_column="@integer/column_2"
            />

            <Button
                    android:text="@string/button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_1"
                    android:backgroundTint="@color/numbers"
                    android:layout_row="@integer/row_1"
                    android:layout_column="@integer/column_0"
            />
            <Button
                    android:text="@string/button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_2"
                    android:backgroundTint="@color/numbers"
                    android:layout_row="@integer/row_1"
                    android:layout_column="@integer/column_1"
            />
            <Button
                    android:text="@string/button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_3"
                    android:backgroundTint="@color/numbers"
                    android:layout_row="@integer/row_1"
                    android:layout_column="@integer/column_2"
            />

            <Button
                    android:text="@string/button_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_0"
                    android:backgroundTint="@color/numbers"
                    android:layout_row="@integer/row_0"
                    android:layout_column="@integer/column_1"
            />


        </GridLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>